--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- CAT API -->
     <section class="grid-item" id="cat-api" draggable="true">
       <h2>🐱 Random Cat</h2>
+      <select id="cat-breed-select"><option value="">Random Breed</option></select>
       <button type="button" id="get-cat">Get Cat</button>
       <button type="button" id="save-cat">Save</button>
       <button type="button" id="show-saved-cat">Show Saved</button>
