--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <button id="theme-toggle">🌗 Toggle Theme</button>
   </header>
 
+  <noscript>
+    <div style="color: red; text-align: center; margin: 2rem;">
+      JavaScript is required for this dashboard to work.
+    </div>
+  </noscript>
+
   <div class="grid-container" id="dashboard" draggable="false">
     <!-- DOG API -->
     <section class="grid-item" id="dog-api" draggable="true">
