--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
     <div class="grid-item" data-id="number" draggable="true">
       <h2>🔢 Number Fact</h2>
       <input type="number" id="number-input" placeholder="Enter a number">
-      <button id="get-number">Get Fact</button>
-      <div id="number-output" class="output"></div>
+      <button id="get-number-fact">Get Fact</button>
+      <div id="number-fact-output" class="output"></div>
     </div>
 
     <!-- 🕹️ Random Pokémon -->
@@ -411,3 +411,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
